--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,17 @@
 [package]
-name = "libperl"
+name = "libperl-rs"
 version = "0.1.0"
 authors = ["Kobayasi, Hiroaki <buribullet@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+crate-type = ["rlib", "cdylib"]
+
 [dependencies]
 
 libperl-sys = { "path" = "./libperl-sys", version = "0.1"}
+
+[build-dependencies]
+regex = "1"
