--- a/libperl-sys/Cargo.toml
+++ b/libperl-sys/Cargo.toml
@@ -8,6 +8,10 @@ links = "perl"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+crate-type = ["rlib", "cdylib"]
+
+
 [dependencies]
 
 [build-dependencies]
