--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,17 @@ language: minimal
 services: docker
 env:
   - image=perl:5.30
+  - image=perl:5.30-threaded
   - image=perl:5.28
+  - image=perl:5.28-threaded
   - image=perl:5.26
+  - image=perl:5.26-threaded
   - image=perl:5.24
+  - image=perl:5.24-threaded
   - image=perl:5.22
+  - image=perl:5.22-threaded
+  - image=perl:5.20
+  - image=perl:5.20-threaded
 before_install:
   - docker pull $image
   - docker run $image perl -V
