--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ keywords = ["perl"]
 
 license = "GPL-1.0-or-later OR Artistic-1.0-Perl"
 
+[workspace]
+members = ["libperl-sys", "libperl-config"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -26,3 +28,5 @@ libperl-sys = { "path" = "./libperl-sys", version = "0.1"}
 
 [build-dependencies]
 regex = "1"
+
+libperl-config = {"path" = "./libperl-config", version = "0.1"}
