Add configs for cargo-release
Following article helped me a lot. Thank you!
https://qiita.com/dalance/items/f2498c319d29c76e7c7f

--- a/libperl-sys/Cargo.toml
+++ b/libperl-sys/Cargo.toml
@@ -15,6 +15,9 @@ links = "perl"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[package.metadata.release]
+disable-tag = true
+
 [badges]
 travis-ci = { repository = "hkoba/libperl-rs", branch = "master" }
 
