Prepare to v0.2.0 of libperl-config

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,4 +29,4 @@ libperl-sys = { "path" = "./libperl-sys", version = "0.1"}
 [build-dependencies]
 regex = "1"
 
-libperl-config = {"path" = "./libperl-config", version = "0.1"}
+libperl-config = {"path" = "./libperl-config", version = "^0.2"}
