--- a/libperl-sys/Cargo.toml
+++ b/libperl-sys/Cargo.toml
@@ -32,4 +32,4 @@ crate-type = ["rlib", "cdylib"]
 bindgen = "0.44"
 regex = "1"
 
-libperl-config = {"path" = "../libperl-config", version = "0.1"}
+libperl-config = {"path" = "../libperl-config", version = "^0.2"}
