--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ crate-type = ["rlib", "cdylib"]
 
 libperl-sys = { "path" = "./libperl-sys", version = "^0.2"}
 typed-arena = "1.2.0"
+if_chain = "1.0"
 
 [build-dependencies]
 regex = "1"
