--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,9 +19,9 @@ jobs:
     - name: Prepare
       run: apt update && apt install -y llvm-dev libclang-dev clang && curl --proto "=https" --tlsv1.2 -sSf https://sh.rustup.rs > rustup.sh && sh ./rustup.sh -y
     - name: Build
-      run: cargo build --verbose
+      run: source $HOME/.cargo/env && cargo build --verbose
     - name: Run tests
-      run: cargo test --verbose --all
+      run: source $HOME/.cargo/env && cargo test --verbose --all
       
     strategy:
       matrix:
