--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,12 +16,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Prepare
-      run: apt update && apt install -y llvm-dev libclang-dev clang && curl --proto "=https" --tlsv1.2 -sSf https://sh.rustup.rs > rustup.sh && sh ./rustup.sh -y
+    - name: Install ${{ matrix.rust-version }}
+      uses: actions-rs/toolchain@v1
+      with:
+          toolchain: ${{ matrix.rust-version }}-${{ matrix.target.triple }}
+          profile: minimal
+          override: true
     - name: Build
-      run: source $HOME/.cargo/env && cargo build --verbose
+      run: cargo build --verbose
     - name: Run tests
-      run: source $HOME/.cargo/env && cargo test --verbose --all
+      run: cargo test --verbose --all
       
     strategy:
       matrix:
@@ -37,6 +41,11 @@ jobs:
           - '5.34'
           - '5.34-threaded'
           - 'latest'
+        rust-version:
+          - 1.54.0 # MSRV
+          - stable
+        target:
+          - { name: Linux, os: ubuntu-latest, triple: x86_64-unknown-linux-gnu }
 
     container:
       image: perl:${{ matrix.perl-version }}
