--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Install dependencies
+      run: sudo apt-get install -y llvm-dev libclang-dev clang
     - name: Install ${{ matrix.rust-version }}
       uses: actions-rs/toolchain@v1
       with:
