--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,15 +15,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
+    - uses: actions-rust-lang/setup-rust-toolchain@v1
     - name: Install dependencies
       run: apt-get update && apt-get install -y llvm-dev libclang-dev clang
-    - name: Install ${{ matrix.rust-version }}
-      uses: actions-rs/toolchain@v1
-      with:
-          toolchain: ${{ matrix.rust-version }}-${{ matrix.target.triple }}
-          profile: minimal
-          override: true
     - name: Build
       run: cargo build --verbose
     - name: Run tests
@@ -43,9 +38,6 @@ jobs:
           - '5.36'
           - '5.38'
           - '5'
-        rust-version:
-          - 1.54.0 # MSRV
-          - stable
         target:
           - { name: Linux, os: ubuntu-latest, triple: x86_64-unknown-linux-gnu }
 
