--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,17 +18,25 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions-rust-lang/setup-rust-toolchain@v1
     - name: Install dependencies
-      run: apt-get update && apt-get install -y llvm-dev libclang-dev clang
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y llvm-dev libclang-dev clang
+
+    - name: Set up Perl ${{ matrix.perl-version }}
+      uses: shogo82148/actions-setup-perl@v1
+      with:
+        perl-version: ${{ matrix.perl-version }}
+        multi-thread: ${{ matrix.threaded }}
+
     - name: Build
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --all --examples
-      
+
     strategy:
+      fail-fast: false
       matrix:
-        threaded:
-          - ''
-          - '-threaded'
+        threaded: [ true, false ]
         perl-version:
           - '5.26'
           - '5.28'
@@ -41,8 +49,3 @@ jobs:
           - '5'
         target:
           - { name: Linux, os: ubuntu-latest, triple: x86_64-unknown-linux-gnu }
-
-    container:
-      image: perl:${{ matrix.perl-version }}${{ matrix.threaded }}
-
-      
