GH-7 - Add more deps

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y llvm-dev libclang-dev clang
+        sudo apt-get install -y llvm-dev libclang-dev clang libnsl-dev
 
     - name: Set up Perl ${{ matrix.perl-version }}
       uses: shogo82148/actions-setup-perl@v1
